--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ body {margin: 0;font-size: 14px;}
 .card {z-index: 2;}
 .toolbar {z-index: 4;}
 .snackbar {z-index: 6;}
-.modal {z-index: 16;}
+.action_btn {z-index: 8;}
+.modal, .chat_space {z-index: 16;}
 /**!! PRE-SET STYLE CLASSES !!**/
 .padding_long {padding: 24px 8px;}
 .padding_16 {padding: 16px;}
@@ -38,6 +39,12 @@ body {margin: 0;font-size: 14px;}
     -webkit-flex-wrap: wrap;
 }
 .flex_col_container {flex-direction: column;}
+.flex_inline_container {
+	display: inline-flex;
+	min-height: 100%;
+	/*display: -moz-flex;*/
+	/*display: -webkit-flex;*/
+}
 .hidden {display: none;}
 .pos_left {margin-left: 0;}
 .pos_right {margin-right: 0;}
@@ -54,6 +61,8 @@ nav {align-self: flex-end;margin-right: 0;flex-wrap: nowrap;-webkit-flex-wrap: n
 /**!! MAIN VIEW CONTAINER !!**/
 .home {background-color: rgba(255,255,255,0.7);}
 .views_container {height: 86%;}
+.intro_container {height: 15%;max-height: 15%;}
+.mini_profiles_view {min-height: 85%;max-height: 85%;overflow-y: auto;}
 /**!! LOGIN/REGISTRATION !!**/
 .page {height: 100%;max-height: 100%;max-width: 1000px;}
 /**!! FOOTER !!**/
@@ -71,13 +80,8 @@ button, h1, h2, h3, p, a, input, .btn {text-align: center;}
 }
 .btn {text-transform: uppercase;}
 button:hover, a:hover, .branding:hover, .btn:hover {cursor: pointer;}
-.btn i, button i {font-size: 24px;padding: 6px;}
-nav .btn {padding: 8px; height: 100%;}
-.action_btn {position: fixed; bottom: 70px;padding: 6px;right: 20px;
-	box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);}
-.action_btn:hover {
-	box-shadow: 0 9px 15px 0 rgba(0,0,0,0.2),0 9px 25px 0 rgba(0,0,0,0.14);
-}
+.btn i, button i {font-size: 24px;padding: 8px;}
+nav .btn { height: 100%;}
 /** BASIC FORMS **/
 form {border-radius: 2px;background-color: transparent;}
 form.access_form {
@@ -90,7 +94,7 @@ form.access_form {
 }
 form.access_form .actions {width: 90%;}
 form.access_form .actions a {font-size: small;width: 50%;}
-form.access_form input:required, form textarea {
+form.access_form input:required, form textarea, form[name=search] input {
 	width: 90%;
 	margin: 8px auto;
 	padding: 12px 20px;
@@ -104,8 +108,7 @@ form.access_form input[type=submit] {width: 90%;}
 form label, .account_actions {width: 60%;}
 textarea {width: 100%;resize: none;}
 /**!! MATERIAL-DESIGN-LIKE CARDS !!**/
-/*.card_container {width: 20%;}*/
-.card, .modal {font-family: 'Cinzel Decorative';font-size: 14px;}
+/*.card, .modal {font-family: 'Cinzel Decorative';font-size: 14px;}*/
 .card {
     height: auto;
 	color: black;
@@ -115,7 +118,6 @@ textarea {width: 100%;resize: none;}
 }
 .card img {width: 100%; height: auto;}
 .card .profile_username {font-size: large;font-weight: bold;color: white;}
-.mini_profiles_view {min-height: 90%;max-height: 90%;overflow-y: auto;}
 .mini_profiles_view .card {
 	max-width: 250px;min-width: 200px;max-height: 400px;min-height: 300px;}
 .mini_profiles_view .card .card_title {
@@ -124,6 +126,9 @@ textarea {width: 100%;resize: none;}
 .mini_profiles_view .card:hover {
 	box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);}
 .filters_container {height: 10%;}
+/**!! MINI PROFILES !!**/
+.mini_profile input[name=status]:checked + span {background: green;color: green;}
+.mini_profile input[name=status] + span {background: darkred;color: darkred;}
 /**!! MODAL !!**/
 .modal {
 	top: 0;
@@ -140,7 +145,6 @@ textarea {width: 100%;resize: none;}
 .modal_content .card p {margin: auto;text-align: center;}
 .modal_content .modal_close {margin-right: 0;border: none;}
 .modal_content .modal_close:hover {background-color: #992030;color: white;}
-/*.modal_content .card p span {font-style: normal;}*/
 /**!! SIGNED-IN USER PROFILE !!**/
 .profile_view {background-color: rgba(255,255,255,0.9);color: black;}
 .profile_view .card {width: auto;height: auto;padding: 8px;}
@@ -158,8 +162,7 @@ textarea {width: 100%;resize: none;}
 /*.profile_view form {color: black;}*/
 .profile_view fieldset {border: none;width: 80%}
 .profile_gallery img {max-width: 100px;max-height: 100px;}
-.profile_view .profile_gallery {padding: 8px;}
-/*.profile_view .edit_actions {display: none;transition: all 0.6s;}*/
+form[name=search] input[name=search] {border-bottom: 2px solid #992030;}
 /**!! LOADER !!**/
 #loader {
 	border: 16px solid #992030;
@@ -170,26 +173,57 @@ textarea {width: 100%;resize: none;}
 	height: 120px;
 	animation: spin 2s linear infinite;
 }
+/**!! CHAT SPACE STYLES !!**/
+.chat_space {position: fixed; bottom: 70px;padding: 6px;right: 20px;width: 350px; }
+.chat_space form {
+	width: 100%;
+	min-width: 300px;
+	background-color: white;
+	margin-bottom: 10px;
+	border: 1px solid #4c1018;
+}
+.chat_space form ul {list-style-type: none;padding: 4px;}
+.chat_space form ul li {
+	margin: 8px auto;
+	border-right: 5px solid transparent;
+	border-bottom: 1px solid transparent;
+	transition: all 0.5s;
+}
+.chat_space form ul li:hover {border-color: rgb(205, 44, 65);cursor: pointer;}
+.chat_space .chat_bubble {
+	background-color: white;
+	color: black;
+	padding: 12px 8px;
+	margin-top: 8px;
+	min-width: 35%;
+	max-width: 80%;
+	border: 1px solid #cd2c41;
+	border-radius: 5px;
+}
+.action_btn, .chat_space form {box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);}
+.chat_space form .new_message_bar {border-top: 2px solid #4c1018;}
+.action_btn:hover {box-shadow: 0 9px 15px 0 rgba(0,0,0,0.2),0 9px 25px 0 rgba(0,0,0,0.14);}
 /** THEME CLASSES **/
 /*box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);*/
 .theme {color: #992030;background: white;border: 2px solid transparent;}
-.theme_transparant {color: #992030;background-color: transparent;}
-.theme:hover {background: #992030; color: white;}
+.theme_transparent {color: #992030;background-color: transparent;}
+.theme:hover, .theme_transparent:hover {background: #992030; color: white;}
 .theme_link {color: white;background: none;border-bottom: 2px solid transparent;}
 .theme_link:hover {color: #992030;background: white;}
 .theme_inverse {color: white;background: #992030;border: 2px solid transparent;}
 .theme_inverse:hover {color: #992030;background: none;}
 .theme_btn {color: white;background-color: #992030;}
-.theme_btn:hover {
-	box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);}
+.theme_btn:hover {box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);}
 .theme_dark {color: white;background-color: #4c1018;}
-.theme_toggle input[type=checkbox] + i {
-	color: slategrey;background-color: transparent;}
+.theme_toggle input[type=checkbox] + i {color: slategrey;background-color: transparent;}
 .theme_toggle:hover + i, .theme_toggle input[type=checkbox]:checked + i {color: #992030;}
 
 .padding_long {padding: 24px 8px;}
 .padding_16 {padding: 16px;}
-.padding_8 {padding: 9px;}
+.padding_8 {padding: 8px;}
+.padding_4 {padding: 4px;}
+
+.scrollable {overflow-y: scroll;}
 /**!! ANIMATIONS AND TRANSITIONS !!**/
 @keyframes spin {
 	0% {transform: rotate(0deg);}
