--- a/views/profile.html
+++ b/views/profile.html
@@ -5,20 +5,45 @@
         <div class="flex_col_container card">
             <div class="flex_col_container margin_4">
                 <img src="imgs/app/avt.svg" id="profile_img" class="circle"/>
-                <span>
-                    <label for="img_upload" class="btn theme_btn full_width img_upload" style="display: none">
-                        change
-                    </label>
-                    <input id="img_upload" type="file" accept="image/*" hidden>
-                </span>
             </div>
             <div class="flex_col_container padding_8">
                 <p>Likes: <span class="profile_likes"> 19 </span></p>
                 <p>Matches: <span class="profile_matches"> 9 </span></p>
                 <p>Rating: <span class="profile_rating"> 7/10 </span></p>
             </div>
-            <div class="flex_col_container account_actions padding_8 full_width">
-                <button name="settings" class="theme full_width">Settings</button>
+        </div>
+        <br>
+        <div class="flex_col_container card profile_gallery" id="conn_img_gallery">
+            <!-- some shit -->
+            <div class="flex_col_container">
+                <div class="flex_container">
+                    <div class="padding_4">
+                        <img id="slot_1" src="imgs/app/avt.svg" class="image_slot">
+                    </div>
+                    <div class="padding_4">
+                        <img id="slot_2" src="imgs/app/avt.svg" class="image_slot">
+                    </div>
+                    <div class="padding_4">
+                        <img id="slot_3" src="imgs/app/avt.svg" class="image_slot">
+                    </div>
+                </div>
+                <div class="flex_container">
+                    <div class="padding_4">
+                        <img src="imgs/app/avt.svg" class="image_slot">
+                    </div>
+                    <div class="padding_4">
+                        <img src="imgs/app/avt.svg" class="image_slot">
+                    </div>
+                    <div class="padding_4">
+                        <img src="imgs/app/avt.svg" class="image_slot">
+                    </div>
+                </div>
+            </div>
+            <div class="flex_container">
+                <label for="img_upload" class="btn theme_btn full_width img_upload flex_1" style="display: none">
+                    change
+                </label>
+                <input id="img_upload" type="file" accept="image/*" hidden>
             </div>
         </div>
     </div>
@@ -26,7 +51,7 @@
         <div class="flex_col_container padding_8 card" id="user_info">
             <fieldset>
                 <legend><b>User Information</b></legend>
-                <form name="update">
+                 <form name="update">
                     <label for="profile_fname">First-name : </label>
                     <input class="info" type="text" name="fname" id="profile_fname" disabled>
                     <br>
@@ -42,6 +67,10 @@
                     <label for="profile_sex_pref">I prefer : </label>
                     <input class="info" type="text" name="sex_pref" id="profile_sex_pref" disabled>
                     <br>
+                    <label for="profile_location">location : </label>
+                    <input class="info" type="text" name="location" id="profile_location" disabled readonly>
+                     <button class="btn gps_location">change location</button>
+                    <br>
                     <label for="profile_bio">About me : </label>
                     <textarea class="info" id="profile_bio" name="bio"
                               placeholder="Searching for my match.." disabled>
@@ -54,14 +83,6 @@
                     </div>
                 </form>
             </fieldset>
-        </div>
-        <br>
-        <div class="flex_container card profile_gallery" id="conn_img_gallery">
-            <!-- some shit -->
-            <img src="imgs/app/avt.svg">
-            <img src="imgs/app/avt.svg">
-            <img src="imgs/app/avt.svg">
-            <img src="imgs/app/avt.svg">
         </div>
     </div>
 </div>
