--- a/views/home.html
+++ b/views/home.html
@@ -1,30 +1,7 @@
-<div id="browser_page" class="flex_col_container page home">
+<div id="browser_page" class="flex_container page home">
     <!-- PAGE TITLE -->
-    <div class="flex_container full_width intro_container">
-        <!--<div class="flex_col_container flex_1 padding_8">-->
-        <!--<h1 class="center flex_3 page_title">Singles near you</h1>-->
-        <a id="search" class="btn theme_transparent pos_right" href="#/search">
-            <i class="fa fa-search"></i>
-        </a>
-        <form name="search" class="flex_container full_width" style="display: none">
-                <label class="flex_container flex_2">
-                    <input type="text" name="search" placeholder="Enter keyword" style="color: #4c1018;" class="criteria">
-                    <input type="submit" value="search" class="btn theme" style="width: auto">
-                </label>
-                <fieldset class="flex_container flex_1">
-                    <legend>Search:</legend>
-                    Usernames
-                    <input type="checkbox" value="username" name="usernames" title="usernames" class="criteria" checked>
-                    <!--First-names<input type="checkbox" value="first_name">
-                    Last-names<input type="checkbox" value="last_name">
-                    location<input type="checkbox" value="location">-->
-                </fieldset>
-            </form>
-        <!--</div>-->
-    </div>
-
     <!-- CONTAINER FOR MINI PROFILE CARDS -->
-    <div id="profiles" class="flex_container full_width mini_profiles_view">
+    <div id="profiles" class="flex_container flex_3 mini_profiles_view">
         <!-- MINI PROFILE CARD TEMPLATE -->
         <div class="card_container mini_profile center padding_8">
             <div class="flex_col_container card">
@@ -50,6 +27,28 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="flex_container flex_1 intro_container">
+        <!--<div class="flex_col_container flex_1 padding_8">-->
+        <!--<h1 class="center flex_3 page_title">Singles near you</h1>-->
+        <a id="search" class="btn theme_transparent pos_right" href="#/search">
+            <i class="fa fa-search"></i>
+        </a>
+        <form name="search" class="flex_container full_width" style="display: none">
+            <label class="flex_container flex_2">
+                <input type="text" name="search" placeholder="Enter keyword" style="color: #4c1018;" class="criteria">
+                <input type="submit" value="search" class="btn theme" style="width: auto">
+            </label>
+            <fieldset class="flex_container flex_1">
+                <legend>Search:</legend>
+                Usernames
+                <input type="checkbox" value="username" name="usernames" title="usernames" class="criteria" checked>
+                <!--First-names<input type="checkbox" value="first_name">
+                Last-names<input type="checkbox" value="last_name">
+                location<input type="checkbox" value="location">-->
+            </fieldset>
+        </form>
+        <!--</div>-->
     </div>
 </div>
 <!-- PROFILE VIEWING MODAL -->
